// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./SpendingLimitLabel.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-1 "
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock size-4 shrink-0 text-[var(--color-border-main)]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <p
        class="m-0 text-base leading-6 font-normal"
        data-slot="typography"
        data-variant="paragraph"
      >
        100 ETH per day
      </p>
    </div>
  </div>
</div>
`;

exports[`./SpendingLimitLabel.stories OneTime 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-1 "
    >
      <p
        class="m-0 text-base leading-6 font-normal"
        data-slot="typography"
        data-variant="paragraph"
      >
        50 ETH
      </p>
    </div>
  </div>
</div>
`;

exports[`./SpendingLimitLabel.stories WithCustomLabel 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-1 "
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock size-4 shrink-0 text-[var(--color-border-main)]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <p
        class="m-0 text-base leading-6 font-semibold text-primary"
        data-slot="typography"
        data-variant="paragraph-bold"
      >
        Custom spending limit
      </p>
    </div>
  </div>
</div>
`;
